--- a/css/estilo-ventanaErrores.css
+++ b/css/estilo-ventanaErrores.css
@@ -76,4 +76,33 @@
   
       
   }
+
+  /*Mensaje de Envio Exitoso*/
+
+  .mensaje-exito{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.mensaje-exito h1{
+    font-size: 35px;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.mensaje-exito a{
+    display: block;
+    padding: 10px 30px;
+    background: rgb(24, 120, 199);
+    text-decoration: none;
+    color: #fff;
+}
+
+.mensaje-exito a:hover{
+    background: #3371B6;
+}
   
