--- a/css/estilo-videos.css
+++ b/css/estilo-videos.css
@@ -12,34 +12,22 @@ body{
     font-family: 'Raleway', sans-serif;
 }
 
-.form input{
-width: 100%;
-padding: 0px 30px 0px 10px;
-line-height: 30px;
-border-radius: 3px;
-}
-
-input{
-border: 0px;
-margin: 0px;
-padding: 0px;
-font-size: 12px;
-font-family: sans-serif;
-border-width: 5px;
-}
-
+video{
+    width: 100%; 
+    }
 
 .hero{
-    background-image: linear-gradient(120deg, rgba(28, 31, 221, 0.699) 0%, rgba(85, 27, 35, 0.692) 100%), url("../img/video-player.jpg");
     width: 100%;
-    height: 650px;
+    height: 500px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     position: relative;
     overflow: hidden;
+   
 }
+
 
 .textos-hero{
     height: 500px;
@@ -52,21 +40,18 @@ border-width: 5px;
 
 .textos-hero h1{
     font-size: 60px;
+    position: absolute;
+    margin-top: -155px;
+    
 }
 
 .textos-hero p{
     font-size: 25px;
     margin-bottom: 20px;
+    position: absolute;
 }
 
-.textos-hero a{
-    display: inline-block;
-    text-decoration: none;
-    padding: 12px 15px;
-    background: #a18cd1;
-    border-radius: 8px;
-    color: #fff;
-}
+
 
 .svg-hero{
     position: absolute;
@@ -75,106 +60,11 @@ border-width: 5px;
     width: 100%;
 }
 
-/* Estilos generales */
-
-.contenedor,
-.wave-contenedor{
-    width: 90%;
-    max-width: 1000px;
-    overflow: hidden;
-    margin: auto;
-    padding: 0 0 80px 0;
-}
-.contenedor{
-    padding: 80px 0;
-}
-
-.titulo{
-    font-weight: 300;
-    font-size: 35px;
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.titulo.left{
-    text-align: left;
-}
-
-.titulo.right{
-    text-align: right;
-}
-
-/* Section */
-
-.website{
-    display: flex;
-    justify-content: space-between;
-}
-
-.website img{
-    width: 48%;
-}
-
-.website .contenedor-textos-main{
-    width: 40%;
-}
-
-.parrafo{
-    text-align: justify;
-    margin-bottom: 20px;
-}
-
-.cta{
-    display: inline-block;
-    text-decoration: none;
-    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
-    padding: 12px 15px;
-    border-radius: 8px;
-    color: #fff;
-}
-
-/* Info */
-
-.info{
-    background: #f5576c;
-    color: #fff;
-}
-
-
-
-.galeria-cont>img{
-    width: 30%;
-    object-fit: cover;
-    margin-bottom: 20px;
-    display: block;
-    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, .5);
-    cursor: pointer;
-    overflow: hidden;
-}
-
-/* info2 */
-
-.last-section{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-bottom: 40px;
-}
-
-.last-section img{
-    width: 48%;
-}
-
-.last-section .contenedor-textos-main{
-    width: 40%;
-}
-
-
 
 @media screen and (max-width:800px){
     .textos-hero h1{
         text-align: center;
-        font-size: 50px;
+        font-size: 45px;
     }
     /* estilos generales */
     .titulo{
@@ -189,21 +79,24 @@ border-width: 5px;
         text-align: center;
     }
 
-    /* section */
-    .website{
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .website img{
-        width: 100%;
-    }
-
-    .website .contenedor-textos-main{
-        width: 100%;
-    }
+ 
 }
+
+@media screen and (max-width:400px){
+    .titulo,
+    .textos-hero h1{
+        font-size: 30px;
+    }
+
+    .textos-hero p{
+        font-size: 20px;
+        text-align: center;
+    }
+
+    
+}
+
+
 
   
 
