--- a/css/estilo-videos.css
+++ b/css/estilo-videos.css
@@ -18,19 +18,17 @@ video{
 
 .hero{
     width: 100%;
-    height: 500px;
-    background-repeat: no-repeat;
+    height: 65%;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     position: relative;
     overflow: hidden;
-   
 }
 
 
 .textos-hero{
-    height: 500px;
+    height: 390px;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -41,13 +39,13 @@ video{
 .textos-hero h1{
     font-size: 60px;
     position: absolute;
-    margin-top: -155px;
+    margin-top: -90px;
     
 }
 
 .textos-hero p{
     font-size: 25px;
-    margin-bottom: 20px;
+    margin-bottom: -55px;
     position: absolute;
 }
 
@@ -55,7 +53,7 @@ video{
 
 .svg-hero{
     position: absolute;
-    bottom: 0;
+    bottom: 0ex;
     left: 0;
     width: 100%;
 }
