--- a/css/estilo-videos.css
+++ b/css/estilo-videos.css
@@ -13,7 +13,10 @@ body{
 }
 
 video{
-    width: 100%; 
+    width: auto; 
+    height: auto;
+    min-width: 100%;
+    min-width: 100%;
     }
 
 .hero{
@@ -28,7 +31,8 @@ video{
 
 
 .textos-hero{
-    height: 390px;
+    width: 100%;
+    height: 500px;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -37,16 +41,24 @@ video{
 }
 
 .textos-hero h1{
+    margin-top: -100px;
     font-size: 60px;
     position: absolute;
-    margin-top: -90px;
-    
 }
 
 .textos-hero p{
     font-size: 25px;
-    margin-bottom: -55px;
+    margin-bottom: 20px;
     position: absolute;
+}
+
+.textos-hero a{
+    display: inline-block;
+    text-decoration: none;
+    padding: 12px 15px;
+    background: #a18cd1;
+    border-radius: 8px;
+    color: #fff;
 }
 
 
