--- a/css/estilo-reproductor.css
+++ b/css/estilo-reproductor.css
@@ -12,27 +12,19 @@ body{
     font-family: 'Raleway', sans-serif;
 }
 
-.form input{
-width: 100%;
-padding: 0px 30px 0px 10px;
-line-height: 30px;
-border-radius: 3px;
-}
+video{
+    width: auto; 
+    height: auto;
+    min-width: 100%;
+    min-width: 100%;
+    }
 
-input{
-border: 0px;
-margin: 0px;
-padding: 0px;
-font-size: 12px;
-font-family: sans-serif;
-border-width: 5px;
-}
+
 
 
 .hero{
-    background-image: linear-gradient(120deg, rgba(28, 31, 221, 0.699) 0%, rgba(85, 27, 35, 0.692) 100%), url("../img/mezclador.jpg");
     width: 100%;
-    height: 650px;
+    height: 65%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -42,6 +34,7 @@ border-width: 5px;
 }
 
 .textos-hero{
+    width: 100%;
     height: 500px;
     color: #fff;
     display: flex;
@@ -51,12 +44,15 @@ border-width: 5px;
 }
 
 .textos-hero h1{
+    margin-top: -160px;
     font-size: 60px;
+    position: absolute;
 }
 
 .textos-hero p{
     font-size: 25px;
     margin-bottom: 20px;
+    position: absolute;
 }
 
 .textos-hero a{
