--- a/css/estilos.css
+++ b/css/estilos.css
@@ -195,7 +195,9 @@ footer{
 }
 
 input[type="text"], 
-input[type="email"]{
+input[type="email"],
+input[type="date"],
+select[type="select"]{
     display: inline-block;
     width: 49%;
     margin-bottom: 30px;
