--- a/css/estilo-acercade.css
+++ b/css/estilo-acercade.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
-
 
 *{
     margin: 0;
@@ -12,8 +10,8 @@
 
 .btn-open-popup{
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 60px;
+    left: 80px;
     transform: translate(-50%, -50%);
     color: #D90C43;
     display: block;
