--- a/css/estilo-acercade.css
+++ b/css/estilo-acercade.css
@@ -8,17 +8,6 @@
 }
 
 
-.btn-open-popup{
-    position: absolute;
-    top: 60px;
-    left: 80px;
-    transform: translate(-50%, -50%);
-    color: #D90C43;
-    display: block;
-    background: rgb(31, 29, 29);
-    padding: 20px 50px;
-    border-radius: 50px;
-}
 
 
 .container-all{
@@ -26,7 +15,7 @@
     height: 100%;
     position: fixed;
     padding: 40px;
-    visibility: hidden;
+    visibility: visible;
     opacity: 0;
     transition: all 600ms;
 }
@@ -62,7 +51,7 @@
 
 
 .img{
-    width: 40%;
+    width: 60%;
     background-image: url();
     background-size: cover;
     background-position: center;
