--- a/css/estilo-acercade.css
+++ b/css/estilo-acercade.css
@@ -10,24 +10,28 @@
 
 
 
-.container-all{
+.content{
     width: 100%;
     height: 100%;
-    position: fixed;
-    padding: 40px;
+    position: absolute;
+    padding: 100px;
     visibility: visible;
     opacity: 0;
-    transition: all 600ms;
+    transition: all 800ms;
+    z-index: 999;
+    
 }
 
 
-.container-all:target{
-    background: rgba(0,0,0,0.8);
+.content:target{
+    background-color: rgba(0,0,0,0.8);
     visibility: visible;
     opacity: 1;
+    border-style: none;
+    
 }
 
-.container-all:target .popup{
+.content:target .popup{
     top: 50%;
     left: 50%;
     transform: rotate(0deg) translate(-50%, -50%);
