--- a/css/estilo-acercade.css
+++ b/css/estilo-acercade.css
@@ -112,8 +112,11 @@
 }
 
 @media screen and (max-width: 500px){
+    .popup{
+        width: 400px;
+    }
     .container-text{
-        padding: 20px;
+        padding: 40px;
     }
     
     .container-text h1{
@@ -121,6 +124,6 @@
     }
     
     .container-text p{
-        font-size: 12px;
+        font-size: 15px;
     }
 }
