--- a/css/estilo-acercade.css
+++ b/css/estilo-acercade.css
@@ -55,13 +55,10 @@
 
 
 .img{
-    width: 25%;
-    height: 40%;
-    margin-left: 100px;
-    margin-right: 50px;
-    background-image: url(/img/Autor.png);
+    width: 10%;
+    background-image: url();
     background-size: cover;
-    background-position: top;
+    background-position: center;
 }
 
 .container-text{
