--- a/css/estilos.css
+++ b/css/estilos.css
@@ -71,12 +71,6 @@ body{
 }
 .contenedor{
     padding: 80px 0;
-    margin-left: 150px;
-}
-
-.contenedor-2{
-    padding: 80px 0;
-    margin-left: 450px;
 }
 
 
@@ -85,16 +79,9 @@ body{
     font-size: 35px;
     text-align: center;
     margin-bottom: 80px;
-    justify-content: center;
     
 }
-.titulo-2{
-    font-weight: 300;
-    font-size: 35px;
-    text-align: center;
-    margin-bottom: 10px;
-    justify-content: center;
-}
+
 
 .titulo.left{
     text-align: left;
@@ -152,12 +139,12 @@ body{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     overflow: hidden;
 }
 
 .eventos-cont>img{
-    width: 20%;
+    width: 25%;
     object-fit: cover;
     margin-bottom: 20px;
     display: block;
@@ -176,8 +163,8 @@ body{
 }
 
 .last-section img{
-    width: 35%;
-    margin-top: 200px;
+    width: 30%;
+    margin-top: 20%;
 }
 
 .last-section .contenedor-textos-main{
