--- a/css/estilo-reproductor.css
+++ b/css/estilo-reproductor.css
@@ -21,7 +21,6 @@ video{
 
 
 
-
 .hero{
     width: 100%;
     height: 65%;
@@ -126,10 +125,14 @@ input[type="submit"]:hover{
     justify-content: center;
     bottom: 0px;
     width: 100%;
-    height: 250px;
+    height: 180px;
     color: #fff;
     background-color:  rgb(46, 44, 44);
     z-index: 999;
+}
+
+.form_buscador{
+    margin-left: 20px;
 }
 
 @media screen and (max-width:800px){
