--- a/css/estilo-ventanaErrores.css
+++ b/css/estilo-ventanaErrores.css
@@ -85,6 +85,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 80px;
 }
 
 .mensaje-exito h1{
