--- a/css/estilo-acercade.css
+++ b/css/estilo-acercade.css
@@ -58,7 +58,7 @@
     width: 40%;
     height: 100%;
     margin-top: 0px;
-    background-image: url("/img/Info-personal.png");
+    background-image: url("img/Info-personal.png");
     background-size: cover;
     background-position: center;
 }
