--- a/css/estilo-acercade.css
+++ b/css/estilo-acercade.css
@@ -101,8 +101,8 @@
     }
     
     .img{
-        width: 100%;
-        height: 40%;
+        width: 45%;
+        height: 100%;
     }
     
     .container-text{
@@ -119,6 +119,11 @@
     }
     .container-text{
         padding: 40px;
+    }
+    
+    .img{
+        width: 45%;
+        height: 100%;
     }
     
     .container-text h1{
